<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>yolo_realsense2_models</name>
  <version>0.0.1</version>
  <description>The yolo_realsense2_models package</description>

  <author email="glpuga@gmail.com">Gerardo Puga</author>
  <maintainer email="glpuga@gmail.com"></maintainer>

  <license file="LICENSE">Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>urdf_launch</exec_depend>
  <exec_depend>xacro</exec_depend>

  <exec_depend>realsense2_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
