<?xml version="1.0"?>
<package format="3">
  <name>yolo_realsense2_models_testbench</name>
  <version>0.1.0</version>
  <description>Sample worlds package</description>

  <author email="glpuga@gmail.com">Gerardo Puga</author>
  <maintainer email="glpuga@gmail.com"></maintainer>

  <license file="LICENSE">Apache 2.0</license>

  <depend>ros_gz_bridge</depend>
  <depend>ros_gz_image</depend>
  <depend>ros_gz_sim</depend>

  <depend>yolo_realsense2_models</depend>

  <depend>sensor_msgs</depend>
  <depend>rosgraph_msgs</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
